feat(#459): Change LnService.getDaiModStVal
Signed-off-by: massifben <105049157+massifben@users.noreply.github.com>