@@ -5,6 +5,7 @@
 package org.lfenergy.compas.sct.commons;
 
 import org.assertj.core.groups.Tuple;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.lfenergy.compas.scl2007b4.model.SCL;
 import org.lfenergy.compas.scl2007b4.model.TIED;
@@ -19,16 +20,20 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 class LdeviceServiceTest {
 
+    private LdeviceService ldeviceService;
+
+    @BeforeEach
+    void setUp() {
+        ldeviceService = new LdeviceService(new LnService());
+    }
+
     @Test
     void getLdeviceStatus_should_return_status() {
         //Given
         SCL std = SclTestMarshaller.getSCLFromFile("/std/std_sample.std");
-        TLDevice tlDevice = std.getIED().get(0).getAccessPoint().get(0).getServer().getLDevice().get(0);
-        LdeviceService ldeviceService = new LdeviceService();
-
+        TLDevice tlDevice = std.getIED().getFirst().getAccessPoint().getFirst().getServer().getLDevice().getFirst();
         //When
         Optional<ActiveStatus> ldeviceStatus = ldeviceService.getLdeviceStatus(tlDevice);
-
         //Then
         assertThat(ldeviceStatus).contains(ActiveStatus.ON);
     }
@@ -37,12 +42,9 @@ class LdeviceServiceTest {
     void getLdevices_should_return_ldevices() {
         //Given
         SCL std = SclTestMarshaller.getSCLFromFile("/std/std_sample.std");
-        TIED tied = std.getIED().get(0);
-        LdeviceService ldeviceService = new LdeviceService();
-
+        TIED tied = std.getIED().getFirst();
         //When
         List<TLDevice> tlDevices = ldeviceService.getLdevices(tied).toList();
-
         //Then
         assertThat(tlDevices)
                 .hasSize(2)
@@ -55,12 +57,9 @@ class LdeviceServiceTest {
     void getFilteredLdevices_should_return_ldevices() {
         //Given
         SCL std = SclTestMarshaller.getSCLFromFile("/std/std_sample.std");
-        TIED tied = std.getIED().get(0);
-        LdeviceService ldeviceService = new LdeviceService();
-
+        TIED tied = std.getIED().getFirst();
         //When
         List<TLDevice> tlDevices = ldeviceService.getFilteredLdevices(tied, tlDevice -> "LDTM".equals(tlDevice.getInst())).toList();
-
         //Then
         assertThat(tlDevices)
                 .hasSize(1)
@@ -72,12 +71,9 @@ class LdeviceServiceTest {
     void findLdevice_should_return_ldevice() {
         //Given
         SCL std = SclTestMarshaller.getSCLFromFile("/std/std_sample.std");
-        TIED tied = std.getIED().get(0);
-        LdeviceService ldeviceService = new LdeviceService();
-
+        TIED tied = std.getIED().getFirst();
         //When
         TLDevice ldevice = ldeviceService.findLdevice(tied, tlDevice -> "LDTM".equals(tlDevice.getInst())).orElseThrow();
-
         //Then
         assertThat(ldevice)
                 .extracting(TLDevice::getInst, TLDevice::getLdName)
@@ -88,12 +84,9 @@ class LdeviceServiceTest {
     void getActiveLdevices_should_return_ldevices() {
         //Given
         SCL std = SclTestMarshaller.getSCLFromFile("/std/std_sample.std");
-        TIED tied = std.getIED().get(0);
-        LdeviceService ldeviceService = new LdeviceService();
-
+        TIED tied = std.getIED().getFirst();
         //When
         List<TLDevice> tlDevices = ldeviceService.getActiveLdevices(tied).toList();
-
         //Then
         assertThat(tlDevices)
                 .hasSize(1)
